[gd_scene load_steps=4 format=3 uid="uid://b5w7c6x8yqv8k"]

[ext_resource type="Script" uid="uid://ds2ne8o5xb145" path="res://scripts/ranch/ui/panels/SettingsPanel.gd" id="1_f5jig"]
[ext_resource type="Theme" uid="uid://brj4bvmookk5t" path="res://scenes/ranch/ui/panels/PanelTheme.tres" id="1_gym2w"]

[sub_resource type="Theme" id="Theme_gym2w"]

[node name="SettingsPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gym2w")
script = ExtResource("1_f5jig")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gym2w")
min_value = -40.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gym2w")
min_value = -40.0
max_value = 0.0

[node name="SfxVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SFX Volume"

[node name="SfxVolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gym2w")
min_value = -40.0
max_value = 0.0

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test SFX"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Close"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
